# MultiarmedBandits

./: README.md
SteadyBandits/: CMakeLists.txt  bandit.txt  make_plots.py  violinplot_bandit.py
SteadyBandits/src/: Bandit.hpp  BanditArm.hpp  BanditSimulator.hpp  BanditStrategy.hpp  main.cpp
SteadyBandits/src/Strategies/: EpsilonGreedyStrategy.hpp  GreedyStrategy.hpp
